--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,11 @@
 # Cmake Directories
 /cmake-build-release/*
 /cmake-build-debug/*
-=======
+
 cmake-build-debug/*
 cmake-build-debug
+cmake-build-release/*
+cmake-build-release
 .idea/*
 .idea
->>>>>>> Halahala1993-master
+
